--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ permalink:        pretty
 relative_permalinks: true
 
 # Setup
-title:            Hyde
+title:            B.J. Noh
 tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+description:      'Here is Noh's Online curriculum vitae. If you have any questions, please feel free to contact me <a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&source=mailto&to=powernoh92@gmail.com" target="_blank">@here</a>.'
 url:              http://hyde.getpoole.com
 baseurl:          /
 
