--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ relative_permalinks: true
 title:            B.J. Noh
 tagline:          'A Jekyll theme'
 description:      'Here is Noh's Online curriculum vitae. If you have any questions, please feel free to contact me <a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&source=mailto&to=powernoh92@gmail.com" target="_blank">@here</a>.'
-url:              http://hyde.getpoole.com
+url:              ''
 baseurl:          /
 
 author:
@@ -21,6 +21,3 @@ paginate:         5
 
 # Custom vars
 version:          2.1.0
-
-github:
-  repo:           https://github.com/poole/hyde
