--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ relative_permalinks: true
 title:            B.J. Noh
 tagline:          'A Jekyll theme'
 description:      'Here is Noh's Online curriculum vitae. If you have any questions, please feel free to contact me <a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&source=mailto&to=powernoh92@gmail.com" target="_blank">@here</a>.'
-url:              ''
+url:              'https://noblesse-bj.github.io/'
 baseurl:          /
 
 author:
