--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,8 @@
-# Dependencies
-markdown:         redcarpet
-highlighter:      pygments
-
-# Permalinks
-permalink:        pretty
-relative_permalinks: true
-
-# Setup
-title:            'B.J. Noh'
+title:            B.J. Noh
 tagline:          'Online CV'
 description:      'Here is Noh's Online curriculum vitae'
 url:              https://noblesse-bj.github.io/
-baseurl:          /
+baseurl:          ''
 
 author:
   name:           'Mark Otto'
