--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Setup
 
 title:            B. J. Noh
-tagline:          ''
-description:      ''
+tagline:          Online CV
+description:      Here is Byeongjoon Noh's Online CV. If you have any questions, feel free to contact me at 
 url:              https://benchoi93.github.io
 baseurl:          ''
 paginate:         5
