--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title:            B. J. Noh
 tagline:          Online CV
 description:      Here is Byeongjoon Noh's Online CV. If you have any questions, feel free to contact me at 
-url:              https://benchoi93.github.io
+url:              https://noblesse-bj.github.io
 baseurl:          ''
 paginate:         5
 
